implemented request to api in own class, will expand upon methods

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,10 @@
         <a class="nav-link" href="#">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="{% url 'homepage' %}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'api_homepage' %}">Api</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About Us</a>
