--- a/templates/base.html
+++ b/templates/base.html
@@ -14,13 +14,12 @@
     <title>Home</title>
   </head>
   <body>
-
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" href="/login/">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
+        <a class="nav-link" href="/signup/">Sign Up</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Home</a>
@@ -29,10 +28,10 @@
         <a class="nav-link" href="#">About Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="/logout/">Logout</a>
       </li>
     </ul>
-    
+
     {% block content %}{% endblock %}
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
