--- a/templates/api_homepage.html
+++ b/templates/api_homepage.html
@@ -20,8 +20,7 @@
         <img src="{{result.background_image}}" class="card-img-top" alt="photo_of_game">
         <div class="card-body">
             <h5 class="card-title">{{result.name}}: {{result.released}}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+            <p class="card-text">{{result.ratings}}</p>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">{{result.id}}</li>
