--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
         <a class="nav-link" href="/signup/">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="{% url 'homepage' %}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'api_homepage' %}">Api</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About Us</a>
