--- a/templates/api_homepage.html
+++ b/templates/api_homepage.html
@@ -16,47 +16,53 @@
     <div>
     </div>
     <div>
-        <div class="d-grid gap-2 col-4 mx-auto">
+        <div class="d-grid gap-2 col-7 mx-auto">
             <h2>Welcome to the Portal</h2>
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="{{first_image}}" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>{{first_title}}</h5>
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="{{first_image}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>{{first_title}}</h5>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="2000">
-                    <img src="{{second_image}}" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>{{second_title}}</h5>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="{{second_image}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>{{second_title}}</h5>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="{{third_image}}" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>{{third_title}}</h5>
+                    <div class="carousel-item">
+                        <img src="{{third_image}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>{{third_title}}</h5>
+                        </div>
                     </div>
-                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
-            <button class="btn btn-primary" type="button">All Games</button>
-            <a href="{% url 'api_all_games' %}">
-            <button class="btn btn-primary" type="button">Search a Game</button>
-        </a>
+            </div>
+            <button class="btn btn-warning" type="button">All Games</button>
+
+            <button class="btn btn-warning" type="button"> <a href="{% url 'api_all_games' %}">Search a
+                    Game</a></button>
+            </a>
         </div>
     </div>
     {% endblock %}
