--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,35 @@
 {% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-  </head>
 
-  <body>
-    {% block content %}
-    <div>
-      <h1>Home Page</h1>
-      <h2>Eric, Aris, Alona, and Jacobs App</h2>
-    </div>
-    {% endblock %}
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+</head>
+
+<body>
+  {% block content %}
+  <div>
+    <h1>Home Page</h1>
+    <h2>Eric, Aris, Alona, and Jacobs App</h2>
+  </div>
+
+  <div>
+    Have an account ?
+  </div>
+  <a href="{% url 'login' %}"></a>
+  <button type="button" class="btn btn-info">Login</button>
+  </a>
+  <div>
+    Dont have an account ?
+  </div>
+  <a href="{% url 'signup' %}">
+
+    <button type="button" class="btn btn-info">Sign Up</button>
+  </a>
+  {% endblock %}
+</body>
+
 </html>
