resolved merge conflicts

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,13 @@
   <div>
     Have an account ?
   </div>
-  <a href="{% url 'login' %}"></a>
+  <a href="/login/">
   <button type="button" class="btn btn-info">Login</button>
   </a>
   <div>
     Dont have an account ?
   </div>
-  <a href="{% url 'signup' %}">
+  <a href="/signup/">
 
     <button type="button" class="btn btn-info">Sign Up</button>
   </a>
