--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Create or Review a Game</a></li>
+              <li><a class="dropdown-item" href="/create_review/">Create or Review a Game</a></li>
             </ul>
           </li>
           <li class="nav-item">
