implemeting review based on games also clean up

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
       <div class="card-body">
         <h5 class="card-title">{{user.username}}</h5>
         <p class="card-text">
-          I enjoy long battles on the beach.
+          {{user.bio}}
         </p>
       </div>
       <ul class="list-group list-group-flush">
