--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,7 +32,8 @@
       </ul>
       <div class="card-body">
         <a href="/edit/{{user.id}}" class="card-link">Edit Profile</a>
-        <a href="#" class="card-link">Message</a>
+        <a href="/message/user/{{user.id}}" class="card-link">Message</a>
+        <a href="/user/{{user.id}}/messages" class="card-link">Messages</a>
       </div>
     </div>
     {% endblock %}
