--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,11 +18,11 @@
 
   
     <div class="card" style="width: 18rem">
-      <img src="{{user.picture.url}}" class="card-img-top" alt="why you no show picture!!!" />
+      <img src="{{user.picture.url}}" class="card-img-top" alt="a picture of user" />
       <div class="card-body">
         <h5 class="card-title">{{user.username}}</h5>
         <p class="card-text">
-          {{user.bio}}
+          Bio: {{user.bio}}
         </p>
       </div>
       <ul class="list-group list-group-flush">
