--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/user/{{request.user.id}}/messages">
             <i class="fa fa-globe">
               <span class="badge badge-success">0</span>
             </i>
