added about devs view /template for nav about

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
         </li>
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/about_devs">
             About Us
           </a>
         </li>
