--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,49 +1,121 @@
 {% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/api/style.css" />
-    <title>Api</title>
-  </head>
 
-  <body>
-    {% block content %}
- 
-    <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col col-lg-2">
-         <h2>Game</h2>
-         <h2>Game</h2>
-         <h2>Game</h2>
-         <h2>Game</h2>
-        </div>
-        <div class="col-md-auto">
-          Variable width content
-        </div>
-        <div class="col col-lg-2">
-          <h2>Review</h2>
-          <h2>Review</h2>
-          <h2>Review</h2>
-          <h2>Review</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          1 of 3
-        </div>
-        <div class="col-md-auto">
-          Variable width content
-        </div>
-        <div class="col col-lg-2">
-          3 of 3
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="/api/style.css" />
+  <title>Api</title>
+</head>
+
+<body>
+  {% block content %}
+
+
+  <div class="row">
+    <div class="col-2">
+      <h2>Recent Questions</h2>
+      <h3>FAQ</h3>
+      <h3>FAQ</h3>
+      <h3>FAQ</h3>
+      <h3>FAQ</h3>
+      <h3>FAQ</h3>
+      <h3>FAQ</h3>
+      <h3>FAQ</h3>
+    </div>
+    <div class="col-10">
+      <div id="content">
+        <div class="d-grid gap-2 col-7 mx-auto">
+          <div class="row">
+            <div class="col-8">
+              <h2>Welcome to the Portal</h2>
+            </div>
+            <div class="col-4">
+              <h2>Activate Cynthia for a virtual tour</h2>
+            </div>
+          </div>
+          <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="1500">
+                <img src="{{first_image}}" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{first_title}}</h5>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="{{second_image}}" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{second_title}}</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="{{third_image}}" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{third_title}}</h5>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <button class="btn btn-warning" type="button">All Games</button>
+  
+          <button class="btn btn-warning" type="button"> <a href="{% url 'api_all_games' %}">Search a
+              Game</a></button>
+          </a>
         </div>
       </div>
     </div>
+    </div>
+  </div>
 
 
-    {% endblock %}
-  </body>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>Recent Reviews</h2>
+        <h3>Review</h3>
+        <h3>Review</h3>
+        <h3>Review</h3>
+        <h3>Review</h3>
+      </div>
+      <div class="col">
+        <h2>Recently Added Games</h2>
+        <h3>Game</h3>
+        <h3>Game</h3>
+        <h3>Game</h3>
+        <h3>Game</h3>
+      </div>
+      <div class="col">
+        Column
+      </div>
+    </div>
+  </div>
+
+
+
+
+  {% endblock %}
+</body>
+
 </html>
