--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,10 +1,32 @@
+
 {% extends 'base.html' %}
-{% block content %}
-<h1>hi</h1>
-{% for item in user_messages %}
-{{ item.message }}
-from: {{ item.author }}
-at: {{ item.date }}
-<br>
-{% endfor %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>User Detail</title>
+  </head>
+
+  
+    {% block content %}
+    <h2>Messages for {{request.user.username}}</h2>
+    
+    {% for item in user_messages %}
+    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+        <div class="card-header">Message from: {{ item.author }}  <a href='/delete/message/{{item.id}}'>Delete</a></div>
+        <div class="card-body">
+          <h4 class="card-title">{{ item.message }}</h4>
+          <p class="card-text">at: {{ item.date }}</p>
+        </div>
+    </div>
+    {% endfor %}
+    {% endblock %}
+  </body>
+</html>
+
+
+
+
+
