--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
       <div class="card-body">
         <a href="/edit/{{user.id}}" class="card-link">Edit Profile</a>
         <a href="/message/user/{{user.id}}" class="card-link">Message</a>
-        <a href="/user/{{user.id}}/messages" class="card-link">Messages</a>
+        <a href="/user/{{user.id}}/messages" class="card-link">Messages({{messages.count}})</a>
       </div>
     </div>
     {% endblock %}
