--- a/templates/base.html
+++ b/templates/base.html
@@ -20,51 +20,6 @@
 
 
 
-  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'homepage' %}">Gamer Zone</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {% if request.user.username %}
-          <li class="nav-item">
-            <a class="nav-link" href="/logout/">Logout</a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="/login/">Login</a>
-          </li>
-          {% endif %}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              The Portal
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{% url 'api_homepage' %}">Home</a></li>
-              <li><a class="dropdown-item" href="#">Search a Game</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="/create_review/">Create or Review a Game</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-          </li>
-        </ul>
-        {% if request.user.username %}
-        <a class="navbar-brand" href="/profile/{{request.user.id}}/">{{request.user.gamer_tag}}</a>
-        {% endif %}
-      </div>
-    </div>
-  </nav> -->
-
-
-
   <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{% url 'homepage' %}">GamerZone</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -96,7 +51,7 @@
         </li>
         {% if request.user.username %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'api_homepage' %}">
+          <a class="nav-link" href="/games">
             Games
           </a>
         </li>
