--- a/templates/games.html
+++ b/templates/games.html
@@ -1,35 +1,41 @@
 {% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/api/style.css" />
     <title>Api</title>
-</head>
+  </head>
 
-<body>
+  <body>
     {% block content %}
     <h1>Data base games</h1>
     {% for game in games %}
-        <div class="card-group">
-            <div class="card">
-              <img src="{{game.image_background}}" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">{{game.title}}</h5>
-                <p class="card-text">Rating: {{game.rating}}</p>
-                <p class="card-text">Platform: {{game.platform}}</p>
-                <p class="card-text">{{game.released_at}}</p>
-                <p class="card-text"><small class="text-muted">Released: {{game.released}}</small></p>
-              </div>
-            </div>
-
-            </div>
-          </div>
-          {% endfor %}
-    {% endblock %}
-</body>
-
+    <div class="card" style="width: 18rem">
+      <img
+        src="{{game.image_background}}"
+        class="card-img-top"
+        alt="picture-of-game"
+      />
+      <div class="card-body">
+        <h5 class="card-title">{{game.title}}</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Rating: {{game.rating}}</li>
+        <li class="list-group-item">Platform: Need to fix when creating games{{game.platform.platform}}</li>
+        <li class="list-group-item">Release Date: {{game.released_at}}</li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">Leave a Review</a>
+        <a href="#" class="card-link">Write a FAQ</a>
+      </div>
+    </div>
+    {% endfor %} {% endblock %}
+  </body>
 </html>
