--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,9 @@
           </a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search a friend by their GT" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" action="/search_user/" method="post">
+        {% csrf_token %}
+        <input class="form-control mr-sm-2" type="text" placeholder="Search a friend by their GT" aria-label="Search" name="gamer_tag">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
       {% endif %}
