created base views for helper

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -33,7 +33,7 @@
               <h2>Welcome to the Portal</h2>
             </div>
             <div class="col-4">
-              <h2>Activate Cynthia for a virtual tour</h2>
+              <h2>{{cynthia}}</h2>
             </div>
           </div>
           <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
