--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,109 +12,96 @@
 
 <body>
   {% block content %}
-
-
-  <div class="row">
-    <div class="col-2">
-      <h2>Recent Questions</h2>
-      <h3>FAQ</h3>
-      <h3>FAQ</h3>
-      <h3>FAQ</h3>
-      <h3>FAQ</h3>
-      <h3>FAQ</h3>
-      <h3>FAQ</h3>
-      <h3>FAQ</h3>
-    </div>
-    <div class="col-10">
-      <div id="content">
-        <div class="d-grid gap-2 col-7 mx-auto">
-          <div class="row">
-            <div class="col-8">
-              <h2>Welcome to the Portal</h2>
-            </div>
-            <div class="col-4">
-              <h2>Activate Cynthia for a virtual tour</h2>
-            </div>
-          </div>
-          <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="1500">
-                <img src="{{first_image}}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>{{first_title}}</h5>
-                </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="1500">
-                <img src="{{second_image}}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>{{second_title}}</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="{{third_image}}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>{{third_title}}</h5>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <button class="btn btn-warning" type="button">All Games</button>
-  
-          <button class="btn btn-warning" type="button"> <a href="{% url 'api_all_games' %}">Search a
-              Game</a></button>
-          </a>
+  <div id="homepage">
+  <div class="header">
+    <h2>Welcome to the Portal</h2>
+    <h3>Activate Cynthia for a virtual tour</h3>
+  </div>
+<div id="homepage-container">
+  <div id="carousel-container">    
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
         </div>
-      </div>
-    </div>
-    </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="1500">
+            <img src="{{first_image}}" class="d-block w-100" alt="..."">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>{{first_title}}</h5>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="1500">
+            <img src="{{second_image}}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>{{second_title}}</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="{{third_image}}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>{{third_title}}</h5>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!-- <button class="btn btn-warning" type="button">All Games</button> -->
+  
+  <!-- <button class="btn btn-warning" type="button"> <a href="{% url 'api_all_games' %}">
+    Search aGame</a>
+  </button> -->
+</div>
+</div>
+
+<div class="homepage-container">
+<div class="homepage-item">
+<h2>Recent Questions</h2>
+<h3>FAQ</h3>
+<h3>FAQ</h3>
+<h3>FAQ</h3>
+<h3>FAQ</h3>
+<h3>FAQ</h3>
+<h3>FAQ</h3>
+<h3>FAQ</h3>
   </div>
 
 
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h2>Recent Reviews</h2>
-        <h3>Review</h3>
-        <h3>Review</h3>
-        <h3>Review</h3>
-        <h3>Review</h3>
-      </div>
-      <div class="col">
-        <h2>Recently Added Games</h2>
-        <h3>Game</h3>
-        <h3>Game</h3>
-        <h3>Game</h3>
-        <h3>Game</h3>
-      </div>
-      <div class="col">
-        Column
-      </div>
+  <div class="homepage-item">
+    <h2>Recent Reviews</h2>
+    <h3>Review</h3>
+    <h3>Review</h3>
+    <h3>Review</h3>
+      <h3>Review</h3>
+    </div>
+    <div class="homepage-item">
+      <h2>Recently Added Games</h2>
+      <h3>Game</h3>
+      <h3>Game</h3>
+      <h3>Game</h3>
+      <h3>Game</h3>
     </div>
   </div>
+  
+  
 
 
 
 
+</div>
   {% endblock %}
 </body>
 
