--- a/templates/game_detail.html
+++ b/templates/game_detail.html
@@ -15,7 +15,7 @@
         <img src="{{game.image_background}}" class="card-img-top" alt="picture-of-game">
         <div class="card-body">
           <h5 class="card-title">{{game.title}}</h5>
-          <p class="card-text">latform: Need to fix when creating games{{game.platform.platform}}</p>
+          <p class="card-text">Platform: {{game.platform}}</p>
           <p class="card-text"><small class="text-muted">Rating: {{game.rating}}</small></p>
           <p class="card-text"><small class="text-muted">Release Date: {{game.released_at}}</small></p>
           <div class="card-body">
