--- a/templates/games.html
+++ b/templates/games.html
@@ -30,7 +30,7 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Rating: {{game.rating}}</li>
-        <li class="list-group-item">Platform: Need to fix when creating games{{game.platform.platform}}</li>
+        <li class="list-group-item">Platform: {{game.platform}}</li>
         <li class="list-group-item">Release Date: {{game.released_at}}</li>
       </ul>
       <div class="card-body">
