implemented search feature for users by their gamertag on navigation bar, get redirected to their profile

--- a/templates/users.html
+++ b/templates/users.html
@@ -13,9 +13,9 @@
   
     {% block content %}
         <h1>Search Results:</h1>
-        {% for user in users %}
-            <h2>{{user}}</h2>
-        {% endfor %}
+      {{users}}
+      {{users.username}}
+      {{users.email}}
     {% endblock %}
   </body>
 </html>
