updated css style sheets

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 
 <body>
   {% block content %}
+
+  {{messages.count}}
   <div>
     <h1>Home Page</h1>
     <h2>Eric, Aris, Alona, and Jacobs App</h2>
