--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/user/{{request.user.id}}/messages">
             <i class="fa fa-globe">
-              <span class="badge badge-success">0</span>
+              <span class="badge badge-success">{{messages.count}}</span>
             </i>
             Messages
           </a>
