can now create a comment on a review

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -24,6 +24,9 @@
             <p> {{faq.question}}</p>
             <footer class="blockquote-footer">  <cite title="Source Title">Created By: {{faq.user}}</cite></footer>
           </blockquote>
+          <div class="card-body">
+            <a href="/create_faq_comment/{{faq.id}}" class="card-link">Comment on FAQ</a>
+          </div>
         </div>
       </div>
 
