--- a/templates/faq_detail.html
+++ b/templates/faq_detail.html
@@ -1,29 +1,24 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% load mptt_tags %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Faqs</title>
+    <title>Faq Detail</title>
   </head>
 
 
   
   
     {% block content %}
-{% for faq in faqs %}
-
-   
     <div class="card">
         <div class="card-header">
             Game: {{faq.game}}
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <a href='/faq_detail/{{faq.id}}/'>
             <p> {{faq.question}}</p>
-          </a>
             <footer class="blockquote-footer">  <cite title="Source Title">Created By: {{faq.user}}</cite></footer>
           </blockquote>
           <div class="card-body">
@@ -32,7 +27,17 @@
         </div>
       </div>
 
-{% endfor %}
+      {% recursetree comments %}
+      <li>
+          {{ node.comment }}
+          -- {{ node.user }}
+          {% if not node.is_leaf_node %}
+              <ul class="children">
+                  {{ children }}
+              </ul>
+          {% endif %}
+      </li>
+  {% endrecursetree %}
     
 {% endblock %}
   </body>
