--- a/templates/404.html
+++ b/templates/404.html
@@ -1,23 +1,36 @@
-<body bgcolor="0"></body>
-<div class="text">
-  <h1 style="color: blueviolet">ERROR 404 Page Not Found</h1>
-  <!-- <h1>404</h1>
-  <!-- <hr /> -->
-  <!-- <div>Page Not Found</div> -->
-</div>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="astronaut">
-  <img
-    src="https://images.vexels.com/media/users/3/152639/isolated/preview/506b575739e90613428cdb399175e2c8-space-astronaut-cartoon-by-vexels.png"
-    alt=""
-    class="src"
-  />
-</div>
-<!-- <button style="color: blueviolet background:blueviolet" type="button">Go Home You're Lost!</button> -->
-<button
-  style="background-color: blueviolet; border-radius: 50px"
-  type="button"
-  class="btn btn-outline-primary"
->
-  <a href="/">GO HOME! YOU'RE LOST</a>
-</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+  <title>Home</title>
+</head>
+
+<body id="fourofour" bg-color=0>
+  <div class="text">
+    <h1 style="color: blueviolet">ERROR 404 Page Not Found</h1>
+    <!-- <h1>404</h1>
+      <!-- <hr /> -->
+      <!-- <div>Page Not Found</div> -->
+    </div>
+    
+    <div class="astronaut">
+      <img
+      src="https://images.vexels.com/media/users/3/152639/isolated/preview/506b575739e90613428cdb399175e2c8-space-astronaut-cartoon-by-vexels.png"
+      alt=""
+      class="src"
+      />
+    </div>
+    <!-- <button style="color: blueviolet background:blueviolet" type="button">Go Home You're Lost!</button> -->
+    <button
+    style="background-color: blueviolet; border-radius: 50px"
+    type="button"
+    class="btn btn-outline-primary"
+    >
+    <a href="/">GO HOME! YOU'RE LOST</a>
+  </button>
+</body>
