--- a/templates/base.html
+++ b/templates/base.html
@@ -89,6 +89,11 @@
       {% endif %}
     </div>
   </nav>
+  {% if messages %}
+  {% for message in messages %}
+    <script>M.toast({html: "{{message}}", classes: 'blue rounded', displayLength:5000});</script>
+  {% endfor %}
+{% endif %}
 
   {% block content %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
