--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+/* homepage.html */
 #homepage {
   background-color: #343a404d;
   
@@ -7,12 +8,14 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-top: 30px;
 
 }
 
-.carousel-item, 
-.carousel-item-active,
-img {
+img, 
+.carousel-inner,
+.carousel-item 
+{
   height: 500px;
   width: 100%;
 }
@@ -40,7 +43,47 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 1px 5px #ffc107;
+  border: 3px solid #ffc107;
+  
+}
+
+/* generic form.html */
+#forms-page-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+
+}
+form {
+  font-size: 24px;
+}
+
+input{
+  font-size: 16px;
+  width: 300px;
+}
+
+#forms {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+
+  margin-top: 200px;
+  padding: 20px;
+  box-shadow: 0px 10px 20px black;
+
+}
+
+/* profile/profile.edit.html */
+#profile-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
 }
 
 /* Aris Fornasari's styling for 404 errors*/
