--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -1,4 +1,26 @@
-<form action="" method="post">
-  {% csrf_token %} {{ form.as_p }}
+{% load static %}
+{% load crispy_forms_tags %}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+  <title>Home</title>
+</head>
+
+<body style="background-color: #343a404d;">
+  <h1> {{ title }}</h1>
+<div id="forms-page-container">
+<div id="forms">
+<form action="" method="post" >
+  {% csrf_token %} {{ form | crispy }}
   <input type="submit" value="Submit" />
 </form>
+</div>
+</div>
+
+</body>
+</html>
