--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,7 @@
 
   
     {% block content %}
+    <body>
     <h1>User Detail</h1>
     <h2>Welcome {{request.user.username}}</h2>
 
@@ -17,7 +18,7 @@
   
 
   
-    <div class="card" style="width: 18rem">
+    <div class="card" style="width: 300px; height: 500px">
       <img src="{{user.picture.url}}" class="card-img-top" alt="why you no show picture!!!" />
       <div class="card-body">
         <h5 class="card-title">{{user.username}}</h5>
@@ -36,6 +37,7 @@
         <a href="/user/{{user.id}}/messages" class="card-link">Messages({{messages.count}})</a>
       </div>
     </div>
+    </body>
     {% endblock %}
   </body>
 </html>
