--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,11 +5,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 30px;
   flex-wrap: wrap;
 }
 
 .carousel-item,
-.carousel-item-active,
 img {
   height: 500px;
   width: 100%;
@@ -33,12 +33,11 @@ a {
   width: 100%;
 }
 
-.header {
+.homepage-header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  box-shadow: 1px 5px #ffc107;
+  border: 3px solid #ffc107;
 }
 
 /* Aris Fornasari's styling for 404 errors*/
