--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,137 +1,179 @@
 {% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/api/style.css" />
+    <title>Api</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="/api/style.css" />
-  <title>Api</title>
-</head>
+  <body>
+    {% block content %}
+    <div id="homepage">
+      <div class="homepage-header">
+        <h1>Welcome to the Gamerzone</h1>
+        ________________________________
+        <h4>
+          This is a site where gamers everywhere can talk <br />
+          about, ask about, or just be about games. Feel <br />
+          free to chat with friends while you're at it.
+        </h4>
+      </div>
+      <div id="homepage-container">
+        <div id="carousel-container">
+          <div
+            id="carouselExampleDark"
+            class="carousel carousel-dark slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="1500">
+                <img src="{{first_image}}" class="d-block w-100" alt="..."">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{first_title}}</h5>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="{{second_image}}" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{second_title}}</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="{{third_image}}" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>{{third_title}}</h5>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- <button class="btn btn-warning" type="button">All Games</button> -->
 
-<body>
-  {% block content %}
-<div id="homepage">
-  <div class="homepage-header">
-    <h1>Welcome to the Gamerzone</h1>
-      ________________________________
-    <h4>This is a site where gamers everywhere can talk <br>
-      about, ask about, or just be about games. Feel <br>
-      free to chat with friends while you're at it.</h4>
-  </div>
-<div id="homepage-container">
-  <div id="carousel-container">    
-      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="1500">
-            <img src="{{first_image}}" class="d-block w-100" alt="..."">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>{{first_title}}</h5>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="1500">
-            <img src="{{second_image}}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>{{second_title}}</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="{{third_image}}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>{{third_title}}</h5>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  <!-- <button class="btn btn-warning" type="button">All Games</button> -->
-  
-  <!-- <button class="btn btn-warning" type="button"> <a href="{% url 'api_all_games' %}">
+          <!-- <button class="btn btn-warning" type="button"> <a href="{% url 'api_all_games' %}">
     Search aGame</a>
   </button> -->
-</div>
-</div>
-
-<div class="homepage-container">
-<div class="homepage-item">
-<h2>Recent Questions</h2>
-{% for faq in faqs %}
-<div class="card">
-  <div class="card-header">
-      Game: {{faq.game}}
-  </div>
-  <div class="card-body">
-    <blockquote class="blockquote mb-0">
-      <a href='/faq_detail/{{faq.id}}/'>
-      <p> {{faq.question}}</p>
-    </a>
-      <footer class="blockquote-footer">  <cite title="Source Title">Created By: {{faq.user}}</cite></footer>
-    </blockquote>
-    <div class="card-body">
-      <a href="/create_faq_comment/{{faq.id}}" class="card-link">Comment on FAQ</a>
-    </div>
-  </div>
-</div>
-{% endfor %}
-  </div>
-
-
-  <div class="homepage-item">
-    <h2>Most active Reviews</h2>
-    {% for review in reviews %}
-    <div class="card">
-      <div class="card-header">
-          Review Game: {{review.game}}
+        </div>
       </div>
-      <div class="card-body">
-        <blockquote class="blockquote mb-0">
-          <a href='/review_detail/{{review.id}}/'>
-          <p> {{review.text}}</p>
-        </a>
-          <footer class="blockquote-footer">  <cite title="Source Title">Created By: {{review.user_created}}</cite></footer>
-        </blockquote>
-        <div class="card-body">
-          <a href="/create_review_comment/{{review.id}}/" class="card-link">Comment on Review</a>
+
+      <div class="homepage-container">
+        <div class="homepage-item">
+          <h2>Recent Questions</h2>
+          {% for faq in faqs %}
+          <div class="card">
+            <div class="card-header">Game: {{faq.game}}</div>
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <a href="/faq_detail/{{faq.id}}/">
+                  <p>{{faq.question}}</p>
+                </a>
+                <p>{{faq.time_created}}</p>
+                <footer class="blockquote-footer">
+                  <a href="/profile/{{faq.user.id}}/"
+                    ><cite title="Source Title"
+                      >Created By: {{faq.user}}</cite
+                    ></a
+                  >
+                </footer>
+              </blockquote>
+              <div class="card-body">
+                <a href="/create_faq_comment/{{faq.id}}" class="card-link"
+                  >Comment on FAQ</a
+                >
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+
+        <div class="homepage-item">
+          <h2>Most active Reviews</h2>
+          {% for review in reviews %}
+          <div class="card">
+            <div class="card-header">Review Game: {{review.game}}</div>
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <a href="/review_detail/{{review.id}}/">
+                  <p>{{review.text}}</p>
+                </a>
+                <p>{{review.time_created}}</p>
+                <footer class="blockquote-footer">
+                  <a href="/profile/{{review.user_created.id}}/"
+                    ><cite title="Source Title"
+                      >Created By: {{review.user_created}}</cite
+                    ></a
+                  >
+                </footer>
+                </footer>
+              </blockquote>
+              <div class="card-body">
+                <a
+                  href="/create_review_comment/{{review.id}}/"
+                  class="card-link"
+                  >Comment on Review</a
+                >
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+        <div class="homepage-item">
+          <h2>Top Searched Games</h2>
+          {% for game in games %}
+          <ul>
+            <li>{{game.name}}</li>
+          </ul>
+          {% endfor %}
         </div>
       </div>
     </div>
-    {% endfor %}
-    </div>
-    <div class="homepage-item">
-      <h2>Top Searched Games</h2>
-        {% for game in games %}
-        <ul>
-          <li>{{game.name}}</li>
-        </ul>
-        {% endfor %}
-    </div>
-  </div>
-  
-  
-
-
-
-
-</div>
-  {% endblock %}
-</body>
-
+    {% endblock %}
+  </body>
 </html>
