fixed homepage index error on random photos, re factored homepage to get all db photos rather than api, remove request

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,11 @@
       <ul class="navbar-nav ">
         {% if request.user.username %}
         <li class="nav-item">
+          <a class="nav-link" href="/virtual_tour/">
+            Activate Virtual Tour
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">
             <i class="fa fa-envelope-o">
               <span class="badge badge-warning">0</span>
