--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -1,8 +1,55 @@
-<h1>Review Detail</h1>
+<!-- <h1>Review Detail</h1>
 <h3>User:{{review.user_created}}</h3>
 <br/>
 <h3>Rview:{{review.text}}</h3>
 <br/>
 <h3>Date Created:{{review.time_created}}</h3>
 <br/>
-<h3>Rating:{{review.rating}}</h3>
+<h3>Rating:{{review.rating}}</h3> -->
+{% extends 'base.html' %} {% load mptt_tags %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Review Detail</title>
+  </head>
+
+
+  
+  
+    {% block content %}
+    <div class="card">
+        <div class="card-header">
+            Game Review: {{review.game}}
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p> {{review.comment}}</p>
+            <footer class="blockquote-footer">  <cite title="Source Title">Reviewed By: {{review.user_created}}</cite></footer>
+          </blockquote>
+          <div class="card-body">
+            <a href="/create_review_comment/{{review.id}}" class="card-link">Review Comment</a>
+          </div>
+        </div>
+      </div>
+
+      {% recursetree comments %}
+      <li>
+          {{ node.comment }}
+          -- {{ node.user }}
+          {% if not node.is_leaf_node %}
+              <ul class="children">
+                  {{ children }}
+              </ul>
+          {% endif %}
+      </li>
+  {% endrecursetree %}
+    
+{% endblock %}
+  </body>
+</html>
+
+
+
