--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,26 +62,38 @@ form {
 input{
   font-size: 30px;
   width: 300px;
-  height: 60px;
+  background-image: inherit;
 }
 
 
-
+#forms-container{
+  height: 700px;
+}
 #forms {
   display: flex;
+  background-image: url("/media/images/Kratos.jpeg ");
   flex-direction: column;
-  justify-content: flex-start;
-  padding-top: 20px;
+  justify-content: center;
   align-items: center;
-  height: 800px; 
-  
+  width: 440px;
+  height: 650px;
+  margin-left: 30%;
+  margin-top: 20px;
+  color: #ffc107;
+  font-weight: bold;
+  box-shadow: 4px 4px 30px black;
+}
+
+.forms-body {
+  display: flex;
+  align-items: center;
 }
 
 
 .btn-form{
   border: none;
   background-color:#28a745;
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 1px 1px 10px black;
   margin-top: 5px;
   font-size: 22px;
 }
@@ -90,8 +102,9 @@ input{
   display: flex;
   justify-content: center;
   width: 200px;
-  border-bottom: 1px solid black;
-  margin-bottom: 30px;
+  border-bottom: 1px solid darkgoldenrod;
+  margin-bottom: 50px;
+  
   
 }
 
@@ -109,6 +122,24 @@ input {
   align-items: center;
   width: 300px;
 }
+
+/* games.html */
+
+#games {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  align-content: space-between;
+  
+}
+
+/* #games,
+img{
+  height: 300px;
+} */
+
 
 /* Aris Fornasari's styling for 404 errors*/
 
