--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -1,11 +1,3 @@
-<!-- <h1>Review Detail</h1>
-<h3>User:{{review.user_created}}</h3>
-<br/>
-<h3>Rview:{{review.text}}</h3>
-<br/>
-<h3>Date Created:{{review.time_created}}</h3>
-<br/>
-<h3>Rating:{{review.rating}}</h3> -->
 {% extends 'base.html' %} {% load mptt_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -26,11 +18,11 @@
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p> {{review.comment}}</p>
+            <p> {{review.text}}</p>
             <footer class="blockquote-footer">  <cite title="Source Title">Reviewed By: {{review.user_created}}</cite></footer>
           </blockquote>
           <div class="card-body">
-            <a href="/create_review_comment/{{review.id}}" class="card-link">Review Comment</a>
+            <a href="/create_review_comment/{{review.id}}" class="card-link">Add Comment</a>
           </div>
         </div>
       </div>
