Fixed small bug on games.html

--- a/templates/games.html
+++ b/templates/games.html
@@ -47,7 +47,7 @@
           <a href="/create_review/{{game.id}}" class="card-link">Leave a Review</a>
           <a href="/createfaq/{{game.id}}" class="card-link">Write a FAQ</a>
         </div>
-
+      </div>
       {% endfor %} 
     </div>
     {% endblock %}
