fixed circular import error on favorite game, added to profile and edit profile form

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,6 +29,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">{{user.email}}</li>
         <li class="list-group-item">GT: {{user.gamer_tag}}</li>
+        <li class="list-group-item">Favorite Game: {{user.favorite_game}}</li>
         <!-- <li class="list-group-item">A third item</li> -->
       </ul>
       <div class="card-body">
@@ -41,4 +42,3 @@
     {% endblock %}
   </body>
 </html>
-
