--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,6 +16,7 @@
 <div id="homepage">
   <div class="homepage-header">
     <h1>Welcome to the Gamerzone</h1>
+    <!-- <img src="{{user.picture.url}}" alt="Your profile photo"/> -->
       <p>________________________________</p>
       <br>
     <h4>This is a site where gamers everywhere can talk <br>
